--- a/index.qmd
+++ b/index.qmd
@@ -34,23 +34,25 @@ source("scripts/datos.R")
 ![](img/logo.jpeg)
 :::
 
-::: {.column width="15%"}
-:::
-
-::: {.column width="40%"}
-`r ht` es el único [podcast](https://open.spotify.com/show/6C4MdNWQSPhmzBlIVau30e) de cine.
-
-Desde 2017 [<b>Fiorella Sargenti</b>](https://www.instagram.com/fiosargenti) y [<b>Santigo Calori</b>](https://www.instagram.com/sancalori/) nos alegran todos los viernes.
-
-Pueden interactuar con la tabla ordenando las filas o usando el buscador.
-:::
-
 ::: {.column width="5%"}
 :::
 
+::: {.column width="40%"}
+<div style='font-size:1.25em'>
+[<b>Fiorella Sargenti</b>](https://www.instagram.com/fiosargenti) y [<b>Santigo Calori</b>](https://www.instagram.com/sancalori/) conducen [`r ht`](https://open.spotify.com/show/6C4MdNWQSPhmzBlIVau30e),<br>el único podcast de cine.
+
+Desde 2017 han generado un total de `r ht_dias_label` días y `r ht_horas_label` horas de contenido.
+
+La presente tabla contiene únicamente episodios en los que se comentó una película(s).
+</div>
+:::
+
+::: {.column width="15%"}
+:::
+
 ::: {.column width="20%"}
-<p style='text-align:right;'>Autor: <b>Víctor Gauto</b><br>
-`r redes$label[1]` `r redes$label[2]` `r redes$label[3]` `r redes$label[4]`/vhgauto<br>
+<p style='text-align:right;'>Autor: <b>Víctor Gauto</b>, `r redes$label[1]` `r redes$label[2]` `r redes$label[3]` `r redes$label[4]`
+<br>
 Ver en `r link_github`</p>
 :::
 
@@ -76,10 +78,11 @@ r
 :::
 
 ::: {.column width="60%"}
-Autor: <b>Víctor Gauto</b><br>
-`r redes$label[1]` `r redes$label[2]` `r redes$label[3]` `r redes$label[4]`/vhgauto
-
-Ver en `r link_github`
+<p style='text-align:right;'>Autor: <b>Víctor Gauto</b>
+<br>
+`r redes$label[1]` `r redes$label[2]` `r redes$label[3]` `r redes$label[4]`
+<br>
+Ver en `r link_github`</p>
 :::
 :::
 :::
