cambio texto en encabezado

--- a/index.qmd
+++ b/index.qmd
@@ -39,7 +39,7 @@ source("scripts/datos.R")
 
 ::: {.column width="40%"}
 <div style='font-size:1.25em'>
-[<b>Fiorella Sargenti</b>](https://www.instagram.com/fiosargenti) y [<b>Santigo Calori</b>](https://www.instagram.com/sancalori/) conducen [`r ht`](https://open.spotify.com/show/6C4MdNWQSPhmzBlIVau30e),<br>el único podcast de cine.
+[<b>Fiorella Sargenti</b>](https://www.instagram.com/fiosargenti) y [<b>Santigo Calori</b>](https://www.instagram.com/sancalori/) conducen [`r ht`](https://open.spotify.com/show/6C4MdNWQSPhmzBlIVau30e), el único podcast de cine.
 
 Desde 2017 han generado un total de `r ht_dias_label` días y `r ht_horas_label` horas de contenido.
 
