--- a/index.qmd
+++ b/index.qmd
@@ -88,3 +88,62 @@ Ver en `r link_github`</p>
 ::: {.column-screen}
 <span style='font-family:JetBrains Mono;'>`r ahora_label`</span>
 :::
+
+<!-- botón para ir arriba -->
+```{=html}
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+#miBoton {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 9999; /* aseguro que el botón esté encima de la tabla */
+  border: none;
+  outline: none;
+  background-color: `r cr`;
+  color: `r cb`;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%; /* el botón es circular */
+}
+
+/* estilo del botón al pasar el mouse */
+#miBoton:hover {
+  background-color: `r ca`;
+  color: `r cn`;
+}
+</style>
+</head>
+<body>
+
+<button onclick="topFunction()" id="miBoton">`r icono_flecha`</button>
+
+<script>
+
+// botón
+var mybutton = document.getElementById("miBoton");
+
+// cuando bajo 500px aparece el botón
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// cuando hago click en el botón se mueve hacia el tope del sitio
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
+
+</body>
+</html>
+```
