--- a/index.qmd
+++ b/index.qmd
@@ -53,7 +53,7 @@ La presente tabla contiene los episodios <i>tradicionales</i>, en los que se dis
 ::: {.column width="20%"}
 <p style='text-align:right;'>Autor: <b>Víctor Gauto</b><br>
 `r redes$label[1]` `r redes$label[2]` `r redes$label[3]` `r redes$label[4]`<br><br>
-Ver en `r link_github`</p>
+[Ver en `r icono_github`](`r link_repositorio`) </p>
 :::
 
 ::::
@@ -80,7 +80,7 @@ r
 ::: {.column width="60%"}
 <p style='text-align:right;'>Autor: <b>Víctor Gauto</b><br>
 `r redes$label[1]` `r redes$label[2]` `r redes$label[3]` `r redes$label[4]`<br><br>
-Ver en `r link_github`</p>
+[Ver en `r icono_github`](`r link_repositorio`)</p>
 :::
 :::
 :::
