cambio texto al inicio, agrego resumen a la derecha

--- a/index.qmd
+++ b/index.qmd
@@ -38,31 +38,47 @@ source("scripts/soporte.R")
 ![](img/logo.jpeg)
 :::
 
-::: {.column width="15%"}
+::: {.column width="10%"}
 :::
 
 ::: {.column width="35%"}
 <div style='font-size:1.25em'>
+<br>
+
 [<b>Fiorella Sargenti</b>](https://www.instagram.com/fiosargenti) y [<b>Santigo Calori</b>](https://www.instagram.com/sancalori/) conducen [`r ht`](https://open.spotify.com/show/6C4MdNWQSPhmzBlIVau30e) desde 2017, el único y mejor podcast <span style='text-decoration: line-through; text-decoration-color:`r cr`;'>de cine</span> del mundo.
 
-En total han generado `r ht_dias_label` días y `r ht_horas_label` de contenido, con `r ht_episodios_label` episodios y `r ht_peliculas_label` películas.
+<!-- En total han generado `r ht_dias_label` días y `r ht_horas_label` de contenido, con `r ht_episodios_label` episodios y `r ht_peliculas_label` películas. -->
 
 La presente tabla interactiva contiene los episodios <i>tradicionales</i>, en los que se discute una (o múltiples) película(s).
 
 Las entradas en <span style='color:`r ca`'>dorado</span> indican que se trata de un episodio exclusivo del [`r cc`](https://hoytrasnoche.com/vip/).
 
+<br>
+
 </div>
+
 :::
 
-::: {.column width="15%"}
+::: {.column width="10%"}
 :::
 
-::: {.column width="15%"}
-<div style='font-size:1.25em'>
-<p style='text-align:right;'>Autor: <b>Víctor Gauto</b><br>
-`r redes$label[1]` `r redes$label[2]` `r redes$label[3]` `r redes$label[4]`<br><br>
-[Ver en `r icono_github`](`r link_repositorio`) </p>
+::: {.column width="25%"}
+<div style='font-size:1.25em; text-align: left'>
+<span style='font-family: JetBrains Mono'>
+`r ht_dias_label` días y `r ht_horas_label` de contenido<br>
+`r ht_episodios_label` episodios<br>
+`r ht_peliculas_label` películas
+</span>
+
+<br>
+
+Autor: <b>Víctor Gauto</b> `r redes$label[5]` `r redes$label[1]` `r redes$label[2]` `r redes$label[3]` `r redes$label[4]`
+<br>
+
+[<span style="color: `r cg4`">Ver en `r icono_github`</span>](`r link_repositorio`)
+
 </div>
+
 :::
 
 ::::
@@ -89,8 +105,8 @@ r
 ::: {.column width="60%"}
 <div style='font-size:1.25em'>
 <p style='text-align:right;'>Autor: <b>Víctor Gauto</b><br>
-`r redes$label[1]` `r redes$label[2]` `r redes$label[3]` `r redes$label[4]`<br><br>
-[Ver en `r icono_github`](`r link_repositorio`)</p>
+`r redes$label[5]` `r redes$label[1]` `r redes$label[2]` `r redes$label[3]` `r redes$label[4]`<br><br>
+[<span style="color: `r cg4`">Ver en `r icono_github`</span>](`r link_repositorio`)</p>
 </div>
 :::
 :::
